[package]
name = "dir-async"
version = "0.1.0"
edition = "2021"
description = "Monitor and Sync directories accross network"
repository = "https://github.com/hiranp/dir-async"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
